--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 					  	<h2 class="heading">Skills</h2>
 						  <!-- Skill Section -->
 						<div class="row mb-4 ftco-animate">
-							<div class="col grow"><img class="img-fluid" src="images/skills/ARcGIS.png" title="ARcGIS"></div>
+							<div class="col grow"><img class="img-fluid" src="images/skills/ArcGIS.png" title="ArcGIS"></div>
 							<div class="col grow"><img class="img-fluid" src="images/skills/qgis1.png" title="QGIS"></div>
 							<div class="col grow"><img class="img-fluid" src="images/skills/josm.png" title="JOSM"></div>
 							<div class="col grow"><img class="img-fluid" src="images/skills/google-earth.png" title="Google Earth Pro"></div>
@@ -259,7 +259,7 @@
 					  		<div class="col grow"><img class="img-fluid" src="images/skills/python.png" title="Python"></div>
 						  </div>
 						  <div class="row mb-2 ftco-animate">
-							<div class="col grow"><img class="img-fluid" src="images/skills/Openlayers.png" title="Openlayers"></div>
+							<div class="col grow"><img class="img-fluid" src="images/skills/OpenLayers.png" title="OpenLayers"></div>
 							  <div class="col grow"><img class="img-fluid" src="images/skills/Microsoft_Excel.png" title="Microsoft Excel"></div>
 							  <div class="col grow"><img class="img-fluid" src="images/skills/Leaflet1.png" title="Leaflet.JS"></div>
 							  <div class="col grow"><img class="img-fluid" src="" title=""></div>
