minor change in project

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								  <span
 								     class="txt-rotate"
 								     data-period="2000"
-								     data-rotate='[ "Maps.", "Data", "all things Geo."]'></span>
+								     data-rotate='[ "Maps", "Data","Cartography", "all things Geo"]'></span>
 								</h2>
 							</div>
             </div>
