--- a/index.html
+++ b/index.html
@@ -183,6 +183,19 @@
 
 					  <div id="page-2" class= "page two">
 					  	<h2 class="heading">Experience</h2>
+						<div class="resume-wrap d-flex ftco-animate">
+					    	<div class="icon d-flex align-items-center justify-content-center">
+					    		<span class="flaticon-suitcase"></span>
+					    	</div>
+					    	<div class="text pl-3">
+		    					<h2>Freelancer</h2>
+		    					<span class="position">GIS Specialist/Geospatial Expert  </span>
+		    					<p class="date">Jan 2020</p>
+		    					<ul>		    					
+									<li>Responsible for developing outputs using GIS as per clients needs and requirements</li>
+							</ul>
+		    				</div>
+	    				</div>
 					    <div class="resume-wrap d-flex ftco-animate">
 					    	<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-suitcase"></span>
